# ModernGraphics

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Tool/: MeshConverter.cpp  SceneConverter.cpp
data/: sceneconverter.json
data/shaders/: BRDF_LUT.comp  GL01_cube.vert  GL01_duck.vert  GL03_cube.vert  GL03_duck.vert  Grid.frag  Grid.vert  GridCalculation.h  GridParameters.h  PBR.sp  PBR_mesh.frag  PBR_mesh.vert  VK04_render.frag  VK04_render.vert  VK04_render_color.frag  VK_InfinitePlane.frag  VK_InfinitePlane.vert  VK_QuadRenderer.frag  VK_indirect_01.vert  compute_mesh.comp  imgui_multi.frag  texture_array.frag  texture_array.vert
data/shaders/07/: AlphaTest.h  VK01.frag  VK01.h  VK01.vert  VK01_VertCommon.h
data/shaders/08/: SSAOBlurCommon.h  VK01_scene.frag  VK01_scene.vert  VK02_SSAO.frag  VK02_SSAOBlurX.frag  VK02_SSAOBlurY.frag  VK03_BrightPass.frag  VK03_HDR.frag  VK03_LightAdaptation.frag  VK03_scene_IBL.frag
data/shaders/09/: VK01_Simple.frag  VK01_Simple.vert
data/shaders/10/: VK01_AtomicTest.frag  VK01_AtomicVisualize.vert  VK02_ComposeOIT.frag  VK02_Depth.vert  VK02_Glass.frag  VK02_Shadow.frag  VK02_Shadow.vert
source/: CMakeLists.txt
src/: ApiWarpping.cpp  AtomicCounter.cpp  BRDF_LUT.cpp  CompileVKShader.cpp  ComputeMesh.cpp  ComputeTexture.cpp  CubeMap.cpp  DescriptorIndexing.cpp  FilterEnvMap.cpp  Final.cpp  GL.h  GLAPITrace.cpp  GL_Camera.cpp  HDR.cpp  LargeScene.cpp  MultiMesh.cpp  PBR.cpp  Physics.cpp  ProgrammableVtxPulling.cpp  SSAO.cpp  SceneGraph.cpp  ShadowMap.cpp  VulkanExample.cpp  main.cpp  mini_vulkan_example.cpp  vulkan_layer.cpp
src/APIWarpper/: GL.h
src/Effects/: HDRProcessor.h  LuminanceCalculator.h  SSAOProcessor.h
src/Framework/: Barriers.h  CompositeRenderer.h  CubeRenderer.cpp  CubeRenderer.h  FinalRenderer.cpp  FinalRenderer.h  GuiRenderer.cpp  GuiRenderer.h  InfinitePlaneRenderer.cpp  InfinitePlaneRenderer.h  LineCanvas.cpp  LineCanvas.h  MultiRenderer.cpp  MultiRenderer.h  Renderer.h  ShaderProcessor.cpp  ShaderProcessor.h  VKQuadRenderer.cpp  VKQuadRenderer.h  VulkanApp.cpp  VulkanApp.h  VulkanResources.cpp  VulkanResources.h
src/OpenGL/: Debug.h  GLShader.cpp  GLShader.h
src/Physics/: physics.cpp  physics.h
src/Scene/: Camera.h  Material.cpp  Material.h  MergeUtil.cpp  MergeUtil.h  Scene.cpp  Scene.h  VtxData.cpp  VtxData.h  vec4.h
src/Utils/: Bitmap.h  EasyProfilerWrapper.h  Graph.h  Utils.cpp  Utils.h  UtilsCubemap.cpp  UtilsFPS.h  UtilsMath.h
src/Vulkan/: ComputeBase.cpp  ComputeBase.h  ComputedImage.cpp  ComputedImage.h  ComputedItem.cpp  ComputedItem.h  ComputedVB.cpp  ComputedVB.h  GuiRenderer.cpp  GuiRenderer.h  ModelRenderer.cpp  ModelRenderer.h  MultiMeshRenderer.cpp  MultiMeshRenderer.h  PBRModelRenderer.cpp  PBRModelRenderer.h  QuadRenderer.cpp  QuadRenderer.h  RendererBase.cpp  RendererBase.h  SingleQuad.cpp  SingleQuad.h  UtilsVulkan.cpp  UtilsVulkan.h  VulkanApp.cpp  VulkanCanvas.cpp  VulkanCanvas.h  VulkanClear.cpp  VulkanClear.h  VulkanCube.cpp  VulkanCube.h  VulkanFinish.cpp  VulkanFinish.h  VulkanImGui.cpp  VulkanImGui.h
